testdata/baselines/reference/submodule/conformance/jsdocFunctionType.errors.txt
functions.js(3,13): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
functions.js(5,14): error TS7006: Parameter 'c' implicitly has an 'any' type.
functions.js(9,23): error TS7006: Parameter 'n' implicitly has an 'any' type.
functions.js(13,13): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
functions.js(15,14): error TS7006: Parameter 'c' implicitly has an 'any' type.
functions.js(22,14): error TS2339: Property 'length' does not exist on type 'C'.
functions.js(30,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
functions.js(31,19): error TS7006: Parameter 'ab' implicitly has an 'any' type.
functions.js(31,23): error TS7006: Parameter 'onetwo' implicitly has an 'any' type.
functions.js(49,13): error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
functions.js(51,26): error TS7006: Parameter 'dref' implicitly has an 'any' type.
functions.js(72,14): error TS7019: Rest parameter 'args' implicitly has an 'any[]' type.


==== functions.js (12 errors) ====
    /**
     * @param {function(this: string, number): number} c is just passing on through
     * @return {function(this: string, number): number}
                ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
     */
    function id1(c) {
                 ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
        return c
    }
    
    var x = id1(function (n) { return this.length + n });
                          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    
    /**
     * @param {function(new: { length: number }, number): number} c is just passing on through
     * @return {function(new: { length: number }, number): number}
                ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
     */
    function id2(c) {
                 ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
        return c
    }
    
    class C {
        /** @param {number} n */
        constructor(n) {
            this.length = n;
                 ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'C'.
        }
    }
    
    var y = id2(C);
    var z = new y(12);
    z.length;
    
    /** @type {function ("a" | "b", 1 | 2): 3 | 4} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    var f = function (ab, onetwo) { return ab === "a" ? 3 : 4;  }
                      ~~
!!! error TS7006: Parameter 'ab' implicitly has an 'any' type.
                          ~~~~~~
!!! error TS7006: Parameter 'onetwo' implicitly has an 'any' type.
    
    
    /** 
     * @constructor
     * @param {number} n
     */
    function D(n) {
      this.length = n;
    }
    
    var y2 = id2(D);
    var z2 = new y2(33);
    z2.length;
    
    
    /** 
     * @param {function(new: D, number)} dref
     * @return {D}
                ~
!!! error TS2749: 'D' refers to a value, but is being used as a type here. Did you mean 'typeof D'?
     */
    var construct = function(dref) { return new dref(33); }
                             ~~~~
!!! error TS7006: Parameter 'dref' implicitly has an 'any' type.
    var z3 = construct(D);
    z3.length;
    
    
    /** 
     * @constructor
     * @param {number} n
     */
    var E = function(n) {
      this.not_length_on_purpose = n;
    };
    
    
    var y3 = id2(E);
    
    // Repro from #39229
    
    /**
     * @type {(...args: [string, string] | [number, string, string]) => void}
     */
    function foo(...args) {
                 ~~~~~~~
!!! error TS7019: Rest parameter 'args' implicitly has an 'any[]' type.
      args;
    }
    
    foo('abc', 'def');
    foo(42, 'abc', 'def');
    